added 2 more articles

--- a/article2.html
+++ b/article2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="index.html">Jake Isaacs</a></h1>
+        <h1><a href="index.html">Jacob Isaacs</a></h1>
     </header>
     
     <article>
