--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <ul>
             <li><a href="article1.html">We Need Digital Manners</a> - 09 September 2025</li>
             <li><a href="article2.html">My Review of Breackneck by Dan Wang</a> - 14 September 2025</li>
+            <li><a href="article3.html">What does art look like with a future of AI?</a> - 16 September 2025</li>
         </ul>
     </main>
 </body>
