--- a/article1.html
+++ b/article1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We Need Digital Manners - Jacob Isaacs</title>
     <link rel="stylesheet" href="style.css">
+    <script src="darkmode.js"></script>
 </head>
 <body>
     <header>
