--- a/article2.html
+++ b/article2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How Can Democrats Regain Trust - A Review of Breakneck - Jake Isaacs</title>
     <link rel="stylesheet" href="style.css">
+    <script src="darkmode.js"></script>
 </head>
 <body>
     <header>
