--- a/article3.html
+++ b/article3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What Does the Future of Art Look Like in the Age of AI? - Jacob Isaacs</title>
     <link rel="stylesheet" href="style.css">
+    <script src="darkmode.js"></script>
 </head>
 <body>
     <header>
