--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         <p>Feast your eyes upon my beautiful website. You might want to wear sunglasses
         <button class="sunglasses-btn" onclick="toggleDarkMode()" title="Toggle dark mode">🕶️</button>
         so the beauty doesn't blind you. Poke around if it tickles your fancy.</p>
+        <p>If you're not too busy, I'd love a compliment pretty please.</p>
+        <input type="text" placeholder="youre so sexy jake">
     </header>
     
     <main>
