--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <button class="sunglasses-btn" onclick="toggleDarkMode()" title="Toggle dark mode">🕶️</button>
         so the beauty doesn't blind you. Poke around if it tickles your fancy.</p>
         <p>If you're not too busy, I'd love a compliment pretty please.</p>
-        <input type="text" placeholder="you are so sexy, jake">
+        <input type="text" placeholder="you are so sexy, jake"> 
+        <button>submit</button>
     </header>
     
     <main>
