--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <main>
         <h2>Articles</h2>
         <ul>
-            <li><a href="article1.html">We Need Digital Manners</a> - 09 September 2025</li>
-            <li><a href="article2.html">My Review of Breakneck by Dan Wang</a> - 14 September 2025</li>
-            <li><a href="article3.html">What does art look like in a future with AI?</a> - 16 September 2025</li>
+            <li><a href="article1.html" target="_blank">We Need Digital Manners</a> - 09 September 2025</li>
+            <li><a href="article2.html" target="_blank">My Review of Breakneck by Dan Wang</a> - 14 September 2025</li>
+            <li><a href="article3.html" target="_blank">What does art look like in a future with AI?</a> - 16 September 2025</li>
         </ul>
     </main>
 
