--- a/article3.html
+++ b/article3.html
@@ -44,7 +44,9 @@
     </article>
     
     <footer>
-        <p><a href="index.html">← Back to articles</a></p>
+        <p> If you're lost it's okay. Take some deep breaths and find your wake back
+            <a href="index.html">home.</a>
+        </p>
     </footer>
 </body>
 </html>
