--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jacob Isaacs - Articles</title>
+    <title>1 more tab u have open</title>
     <link rel="stylesheet" href="style.css">
     <style>
         /* Dark mode styles */
