--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <header>
         <h1>Jacob Isaacs</h1>
-        <p>Feast your eyes upon my beautiful website. I know you like it you freak. You might want to wear sunglasses
+        <p>Feast your eyes upon my beautiful website. Be careful though, you might want to wear sunglasses
         <button class="sunglasses-btn" onclick="toggleDarkMode()" title="Toggle dark mode">🕶️</button>
         so the beauty doesn't blind you. Poke around if it tickles your fancy.</p>
         <p>If you're not too busy, I'd love a compliment pretty please.</p>
