--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     </header>
     
     <main>
-        <h2>Articles</h2>
-        <ul>
+        <h2>writings</h2>
+        <ol>
             <li><a href="article1.html" target="_blank">We Need Digital Manners</a> - 09 September 2025</li>
             <li><a href="article2.html" target="_blank">My Review of Breakneck by Dan Wang</a> - 14 September 2025</li>
             <li><a href="article3.html" target="_blank">What does art look like in a future with AI?</a> - 16 September 2025</li>
-        </ul>
+        </ol>
     </main>
 
     <script>
