--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
         <p>If you're not too busy, I'd love a compliment pretty please.</p>
         <input type="text" placeholder="you are so sexy, jake"> 
         <button>submit</button>
+        <p>I am so indecisive but that's okay</p>    
+            <ol>
+                <li>yes</li>
+                <li>no</li>
+                <li>maybe so</li>
+            </ol>
     </header>
     
     <main>
