--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <li>no</li>
                 <li>maybe so</li>
             </ol>
+        <p> plaese connect with me on LinkedIn<a href="https://www.linkedin.com/in/thejacobisaacs" target="_blank">here.</a></p>
     </header>
     
     <main>
