--- a/index.html
+++ b/index.html
@@ -53,13 +53,7 @@
         <p>If you're not too busy, I'd love a compliment pretty please.</p>
         <input type="text" placeholder="you are so sexy, jake"> 
         <button>submit</button>
-        <p>I am so indecisive but that's okay</p>    
-            <ol>
-                <li>yes</li>
-                <li>no</li>
-                <li>maybe so</li>
-            </ol>
-        <p> plaese connect with me on LinkedIn<a href="https://www.linkedin.com/in/thejacobisaacs" target="_blank">here.</a></p>
+        <p> please connect with me on LinkedIn <a href="https://www.linkedin.com/in/thejacobisaacs" target="_blank">here.</a></p>
     </header>
     
     <main>
