--- a/article3.html
+++ b/article3.html
@@ -44,7 +44,7 @@
     </article>
     
     <footer>
-        <p> If you're lost it's okay. Take some deep breaths and find your wake back
+        <p> If you're lost it's okay. Take some deep breaths and find your way back
             <a href="index.html">home.</a>
         </p>
     </footer>
