--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Feast your eyes upon my beautiful website. Be careful though, you might want to wear sunglasses
         <button class="sunglasses-btn" onclick="toggleDarkMode()" title="Toggle dark mode">🕶️</button>
         so the beauty doesn't blind you. Poke around if it tickles your fancy.</p>
-        <p>If you're not too busy, I'd love a compliment pretty please.</p>
+        <p>If you're not too busy, I'd love a compliment.</p>
         <input type="text" placeholder="you are so sexy, jake"> 
         <button>submit</button>
         <p> please connect with me on LinkedIn <a href="https://www.linkedin.com/in/thejacobisaacs" target="_blank">here.</a></p>
