--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
         <p>Feast your eyes upon my beautiful website. Be careful though, you might want to wear sunglasses
         <button class="sunglasses-btn" onclick="toggleDarkMode()" title="Toggle dark mode">🕶️</button>
         so the beauty doesn't blind you. Poke around if it tickles your fancy.</p>
-        <p>If you're not too busy, I'd love a compliment.</p>
+        <p>send me a message, but at least flatter me first.</p>
         <input type="text" placeholder="you are so sexy, jake"> 
         <button>submit</button>
-        <p> please connect with me on LinkedIn <a href="https://www.linkedin.com/in/thejacobisaacs" target="_blank">here.</a></p>
     </header>
+
+    <button>start here</button>
+    <button>writings</button>
+    <button>projects</button>
+    <button>books i liked</button>
     
     <main>
         <h2>writings</h2>
