--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Feast your eyes upon my beautiful website. Be careful though, you might want to wear sunglasses
         <button class="sunglasses-btn" onclick="toggleDarkMode()" title="Toggle dark mode">🕶️</button>
         so the beauty doesn't blind you. Poke around if it tickles your fancy.</p>
-        <p>send me a message, but at least flatter me first.</p>
+        <p>If you can't send a carrier pidgeon an email will suffice, but at least flatter me first.</p>
         <input type="text" placeholder="you are so sexy, jake"> 
         <button>submit</button>
     </header>
